# openwalk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
openwalk/: __init__.py  __main__.py  config.py
openwalk-health-bridge/: Package.swift
openwalk-health-bridge/.build/: build.db  plugin-tools.yaml
openwalk-health-bridge/.build/arm64-apple-macosx/debug/: description.json  openwalk-health-bridge
openwalk-health-bridge/Sources/CLI/: main.swift
openwalk-health-bridge/Sources/HealthBridgeLib/: HealthBridge.swift  Models.swift
openwalk-health-bridge/Tests/: HealthBridgeTests.swift
openwalk-health-bridge/openwalk-health-bridge/openwalk-health-bridge/: ChunkWriter.swift  Deduplication.swift  WorkoutWriter.swift  main.swift
openwalk-health-bridge/openwalk-health-bridge/openwalk-health-bridge.xcodeproj/: project.pbxproj
openwalk/ble/: __init__.py  characteristics.py  connection.py  notifications.py  scanner.py
openwalk/cli/: __init__.py  main.py
openwalk/protocol/: __init__.py  counters.py  frames.py  messages.py  parser.py  validators.py
openwalk/session/: __init__.py  calories.py  orchestrator.py  state.py
openwalk/storage/: __init__.py  chunks.py  database.py  samples.py  schema.py  sessions.py
openwalk/sync/: __init__.py  healthkit_bridge.py  sync_manager.py
openwalk/tui/: __init__.py  app.py  dashboard.py  keyboard.py
scripts/: analyze_trial.py  capture_trial.py  test_live.py
tests/: __init__.py  test_ble.py  test_cli.py  test_session.py  test_storage.py  test_sync.py  test_tui.py
(+263 files in other folders)
