[project]
name = "openwalk"
version = "0.1.0"
description = "macOS terminal app for the InMovement Unsit treadmill. Captures walking sessions via BLE, tracks steps/distance/calories in real-time, and syncs to Apple Health."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "W. Jonas Reger" }]
keywords = ["treadmill", "ble", "bluetooth", "healthkit", "fitness", "walking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Health and Fitness",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "bleak>=2.1.1",
    "click>=8.3.1",
    "rich>=14.3.2",
    "textual>=8.0.0",
]

[project.scripts]
openwalk = "openwalk.cli.main:cli"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.black]
line-length = 100
target-version = ["py311"]
